--- a/src/styles/PrizeTimeline.css
+++ b/src/styles/PrizeTimeline.css
@@ -2,7 +2,7 @@
 .prize-section {
     text-align: center;
     align-self: center;
-    height: 270vh;
+    height: 70vh;
     padding: 40px 20px 120px 20px;
   }
   
@@ -53,6 +53,9 @@
     @media (max-width: 768px) {}
 
     @media (max-width: 576px) {
+        .prize-section {
+            height: 260vh;
+        }
         .prize-heading {
             font-size: 38px;
             text-align: left;
